Fix gap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,6 +102,10 @@ br {
     display: block !important;
 }
 
+.gap {
+    margin-top: 3%;
+}
+
 body {
     margin: 0;
 }
